cmake_minimum_required (VERSION 2.6)
project (KEYVALUESTORE)

add_library (KeyValueStore              KeyValueStore.cpp)
add_library (MemStore                   MemStore.cpp)
add_library (DiskStore                  DiskStore.cpp)
add_library (Map                        Map.cpp)
add_library (DiskFile                   DiskFile.cpp)
add_library (InputStream                InputStream.cpp)
add_library (MapInputStream             MapInputStream.cpp)
add_library (DiskFileInputStream        DiskFileInputStream.cpp)
add_library (DiskFileOutputStream       DiskFileOutputStream.cpp)
add_library (PriorityInputStream        PriorityInputStream.cpp)
add_library (CompactionManager          CompactionManager.cpp)
add_library (NullCompactionManager      NullCompactionManager.cpp)
add_library (ImmCompactionManager       ImmCompactionManager.cpp)
add_library (GeomCompactionManager      GeomCompactionManager.cpp)
add_library (LogCompactionManager       LogCompactionManager.cpp)
add_library (UrfCompactionManager       UrfCompactionManager.cpp)
add_library (Serialization              Serialization.cpp)
add_library (Range                      Range.cpp)
add_library (VFile                      VFile.cpp)
add_library (VFileIndex                 VFileIndex.cpp)
add_library (Statistics                 Statistics.cpp)


target_link_libraries (VFile                    VFileIndex Statistics)
target_link_libraries (DiskFile                 VFile)
target_link_libraries (DiskFileInputStream      Serialization InputStream)
target_link_libraries (DiskFileOutputStream     Serialization)
target_link_libraries (Map                      Serialization)
target_link_libraries (MapInputStream           InputStream)
target_link_libraries (PriorityInputStream      DiskFileInputStream MapInputStream)
target_link_libraries (MemStore                 Map)
target_link_libraries (DiskStore                DiskFile VFile)

target_link_libraries (CompactionManager        MemStore DiskStore MapInputStream DiskFile DiskFileInputStream DiskFileOutputStream PriorityInputStream Serialization)
target_link_libraries (NullCompactionManager    CompactionManager MemStore DiskStore)
target_link_libraries (ImmCompactionManager     GeomCompactionManager)
target_link_libraries (GeomCompactionManager    CompactionManager MemStore DiskStore MapInputStream DiskFile DiskFileInputStream)
target_link_libraries (LogCompactionManager     GeomCompactionManager)
target_link_libraries (UrfCompactionManager     CompactionManager MemStore DiskStore MapInputStream DiskFile DiskFileInputStream Range)
target_link_libraries (KeyValueStore            MemStore DiskStore NullCompactionManager ImmCompactionManager GeomCompactionManager LogCompactionManager UrfCompactionManager Statistics)

add_executable (sim main.cpp)
target_link_libraries (sim KeyValueStore)

add_subdirectory (test)
add_subdirectory (tools)
