cmake_minimum_required (VERSION 2.6)
project (KEYVALUESTORE)

add_library (KeyValueStore              KeyValueStore.cpp)
add_library (MemStore                   MemStore.cpp)
add_library (DiskStore                  DiskStore.cpp)
add_library (Map                        Map.cpp)
add_library (DiskFile                   DiskFile.cpp)
add_library (InputStream                InputStream.cpp)
add_library (MapInputStream             MapInputStream.cpp)
add_library (DiskFileInputStream        DiskFileInputStream.cpp)
add_library (DiskFileOutputStream       DiskFileOutputStream.cpp)
add_library (PriorityInputStream        PriorityInputStream.cpp)
add_library (Streams                    Streams.cpp)
add_library (CompactionManager          CompactionManager.cpp)
add_library (NomergeCompactionManager   NomergeCompactionManager.cpp)
add_library (ImmCompactionManager       ImmCompactionManager.cpp)
add_library (GeomCompactionManager      GeomCompactionManager.cpp)
add_library (LogCompactionManager       LogCompactionManager.cpp)
add_library (RangemergeCompactionManager    RangemergeCompactionManager.cpp)
add_library (CassandraCompactionManager     CassandraCompactionManager.cpp)
add_library (Range                      Range.cpp)
add_library (VFile                      VFile.cpp)
add_library (VFileIndex                 VFileIndex.cpp)
add_library (Statistics                 Statistics.cpp)
add_library (Scanner                    Scanner.cpp)
add_library (Buffer                     Buffer.cpp)
add_library (RequestThrottle            RequestThrottle.cpp)
add_library (PoolAllocator              PoolAllocator.cpp)

target_link_libraries (VFile                    Statistics)
target_link_libraries (Buffer                   VFile)
target_link_libraries (DiskFile                 VFile VFileIndex Buffer)
target_link_libraries (DiskFileInputStream      InputStream DiskFile VFile VFileIndex Buffer)
target_link_libraries (DiskFileOutputStream     DiskFile VFile VFileIndex Buffer)
target_link_libraries (Map                      Buffer)
target_link_libraries (MapInputStream           InputStream)
target_link_libraries (PriorityInputStream      DiskFileInputStream MapInputStream)
target_link_libraries (Streams                  MapInputStream DiskFile DiskFileInputStream DiskFileOutputStream PriorityInputStream Buffer Statistics)
target_link_libraries (MemStore                 Map MapInputStream Statistics)
target_link_libraries (DiskStore                DiskFile VFile)
target_link_libraries (Scanner                  KeyValueStore PriorityInputStream)

target_link_libraries (CompactionManager        MemStore DiskStore MapInputStream DiskFile DiskFileInputStream DiskFileOutputStream PriorityInputStream Buffer Streams)
target_link_libraries (NomergeCompactionManager CompactionManager MemStore DiskStore)
target_link_libraries (ImmCompactionManager     GeomCompactionManager)
target_link_libraries (GeomCompactionManager    CompactionManager MemStore DiskStore MapInputStream DiskFile DiskFileInputStream Streams)
target_link_libraries (CassandraCompactionManager    CompactionManager MemStore DiskStore DiskFile DiskFileInputStream Streams)
target_link_libraries (LogCompactionManager     GeomCompactionManager)
target_link_libraries (RangemergeCompactionManager     CompactionManager MemStore DiskStore MapInputStream DiskFile DiskFileInputStream Range Streams)
target_link_libraries (KeyValueStore            MemStore DiskStore NomergeCompactionManager ImmCompactionManager GeomCompactionManager LogCompactionManager RangemergeCompactionManager CassandraCompactionManager Statistics)

add_executable (sim main.cpp)
target_link_libraries (sim KeyValueStore Scanner RequestThrottle)

add_subdirectory (test)
add_subdirectory (tools)
